fixed mobile menu (so it's clickable, not being overlapped and getting closed when clicked)

--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -10,3 +10,7 @@
   nav.md\\:hidden.block {
     display: block;
   }
+
+  .mobile-menu {
+    z-index: 50; 
+  }
